unpackaged/main/default/objects/OpportunityLineItem/fields/Committed_ARR__c.field-meta.xml
<CustomField>
    <fullName>Committed_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed ARR</label>
    <type>Checkbox</type>
</CustomField>