unpackaged/main/default/objects/OpportunityLineItem/fields/Opp_Prod_Line_ACV_Full_Term__c.field-meta.xml
<CustomField>
    <fullName>Opp_Prod_Line_ACV_Full_Term__c</fullName>
    <description>Calculates the full 12 month term ACV for the Opportunity Product Line. Annualizes Term less than 12 months or greater than 12 months</description>
    <formula>IF(Subscription_Type_Text__c &lt;&gt; "Renewable",0,
IF(
AND(Subscription_Type_Text__c ="Renewable",SBQQ__QuoteLine__r.SBQQ__EffectiveStartDate__c
&gt; Opportunity_Start_Date__c + 364),0,
TotalPrice / Opp_Prod_Line_Term__c * 12
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the full 12 month term ACV for the Opportunity Product Line. Annualizes Term less than 12 months or greater than 12 months</inlineHelpText>
    <label>Opp Prod Line ACV Full Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>