unpackaged/main/default/objects/OpportunityLineItem/fields/Opp_Prod_Line_Term__c.field-meta.xml
<CustomField>
    <fullName>Opp_Prod_Line_Term__c</fullName>
    <description>Populates the Opportunity Product Line Term from the Quote Line Effective Subscription Term</description>
    <formula>IF(
   ISBLANK(SBQQ__QuoteLine__r.SBQQ__EffectiveSubscriptionTerm__c),
   Opp_Prod_Line_Term_Override__c,
   SBQQ__QuoteLine__r.SBQQ__EffectiveSubscriptionTerm__c
  )</formula>
    <inlineHelpText>Populates the Opportunity Product Line Term from the Quote Line Effective Subscription Term</inlineHelpText>
    <label>Opp Prod Line Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>