unpackaged/main/default/objects/OpportunityLineItem/fields/Opp_Prod_Line_Term_Override__c.field-meta.xml
<CustomField>
    <fullName>Opp_Prod_Line_Term_Override__c</fullName>
    <description>This field is designed as a temporary override of the 'Opp Prod Line Term' field to account for historical Opp/Product data that was created before CPQ was rolled out. This should be deleted after a full migration to CPQ architecture is completed.</description>
    <inlineHelpText>This field is designed as a temporary override of the 'Opp Prod Line Term' field to account for historical Opp/Product data that was created before CPQ was rolled out. This should be deleted after a full migration to CPQ architecture is completed.</inlineHelpText>
    <label>Opp Prod Line Term (Override)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>