unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_Line_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Line_ACV__c</fullName>
    <formula>TotalPrice /((DATEVALUE( Opportunity.ServiceEndDate__c) -DATEVALUE(Opportunity.ServicesStartDate__c)) /365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product Line ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>