unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Start_Date__c</fullName>
    <description>Converts the text Opportunity Services Start Date to a Date datatype.  Used to be compared to the Quote Line Effective Start Date.</description>
    <formula>DATEVALUE(Opportunity.ServicesStartDate__c)</formula>
    <inlineHelpText>Converts the text Opportunity Services Start Date to a Date datatype.  Used to be compared to the Quote Line Effective Start Date.</inlineHelpText>
    <label>Opportunity Start Date</label>
    <type>Date</type>
</CustomField>