unpackaged/main/default/objects/OpportunityLineItem/fields/OpportunityProductEffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductEffectiveEndDate__c</fullName>
    <description>twin field from quote line</description>
    <inlineHelpText>twin field from quote line</inlineHelpText>
    <label>Opportunity Product Effective End Date</label>
    <type>Date</type>
</CustomField>