unpackaged/main/default/objects/OpportunityLineItem/fields/OpportunityProductEffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductEffectiveStartDate__c</fullName>
    <description>twin field from quote line</description>
    <inlineHelpText>twin field from quote line</inlineHelpText>
    <label>Opportunity Product Effective Start Date</label>
    <type>Date</type>
</CustomField>