unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Family_formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_formula__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__ProductFamily__c</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>