unpackaged/main/default/objects/OpportunityLineItem/fields/QuoteTerm__c.field-meta.xml
<CustomField>
    <fullName>QuoteTerm__c</fullName>
    <description>Length of the quote term</description>
    <inlineHelpText>Length of the quote term</inlineHelpText>
    <label>Quote Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>