unpackaged/main/default/objects/OpportunityLineItem/fields/QuoteTermformula__c.field-meta.xml
<CustomField>
    <fullName>QuoteTermformula__c</fullName>
    <description>Term Length of the Quote</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__Quote__r.SBQQ__SubscriptionTerm__c</formula>
    <inlineHelpText>Term Length of the Quote</inlineHelpText>
    <label>Quote Term (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>