unpackaged/main/default/objects/OpportunityLineItem/fields/Subscription_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type_Text__c</fullName>
    <description>Converts the Subscription Type Picklist value to Text to use in formulas</description>
    <formula>TEXT(SBQQ__SubscriptionType__c)</formula>
    <inlineHelpText>Converts the Subscription Type Picklist value to Text to use in formulas</inlineHelpText>
    <label>Subscription Type Text</label>
    <type>Text</type>
</CustomField>